--- a/model.html
+++ b/model.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Gửi em nhân ngày 8/3</title>
+        <title>[Nhắn gửi ai thì nhét vào đây]</title>
         <link rel="stylesheet" href="main.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
