--- a/mom1.html
+++ b/mom1.html
@@ -9,7 +9,7 @@
     </head>
     <body>    
         <div class="border">
-            <p>[Thêm thư vào đây nhé mấy con gà!!!]</p>
+            <p>Chúc mẹ một ngày 8/3 thật vui vẻ, có hiều sức khỏe, luôn xinh đẹp và hạnh phúc<br> You're the bét mom ever!!!</p>
         </div>
     </body>
     <script>
