--- a/sis1.html
+++ b/sis1.html
@@ -9,7 +9,7 @@
     </head>
     <body>    
         <div class="border">
-            <p>[Thêm thư vào đây nhé mấy con gà!!!]</p>
+            <p>Chúc em một ngày 8/3 thật vui vẻ, mong em tiếp tục cố gắng trong học tập và cuộc sống<br> You can do it, I believe in you.</p>
         </div>
     </body>
     <script>
