--- a/sis.html
+++ b/sis.html
@@ -27,7 +27,7 @@
 
                 // Redirect after a delay (e.g., 2 seconds)
                 setTimeout(() => {
-                    window.location.href = "model1.html"; // Change to the desired page
+                    window.location.href = "sis1.html"; // Change to the desired page
                 }, 2000);
             } else {
                 heading.style.opacity = "1"; // Show again if unchecked
