--- a/mom1.html
+++ b/mom1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Gửi em nhân ngày 8/3</title>
+        <title>Gửi mẹ nhân ngày 8/3</title>
         <link rel="stylesheet" href="main1.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
