--- a/Edenlina1.html
+++ b/Edenlina1.html
@@ -9,17 +9,24 @@
     </head>
     <body>    
         <div class="border">
-            <p>I am not that good with word if I have to be totally honest. It's true that I have given you some gifts,
-<br> but those are things I bought with money, some from my parents and some from my part-time job. However, <br>
-I don't feel that those gifts are enough to show how I truly feel. So I decided to make this digital card (I made the template from scratch a while ago and<br>
-edited and imporved it for this occasion)<br>
-Enough rambling though, I have so many things to tell you, even after all the texts, all the night calls. I cannot say all the of them in this card. But if I have to say something,<br>
-I would say that, the decision to texted you that day was one of my best decisions. I love every moment talking to you, I love listening to all your stories, from random reels and funny bits in your day, to serioud<br>
-and deep-rooted trauma. Everything has made me more appreciative of you. At first, I saw you as a funny and a little annoying freshman. Gradually, learning and talking more with you, I realized that you are so much more special than that<br>
-You are a beautiful person, a taleted artist, a chaotic and funny munchkin, and a girl with a loving heart.<br>
-Seeing your smile, my heart always skipped a beat. I enjoy seeing you happy, to see you shine and thrive in your new school environment.<br>
-From a casual friend, you have become more than that to me, something I cannot imagine losing right now.<br>
-Thank you for being a part of my life,Edenlina-Thanh Mai.❤️❤️❤️<br></p>
+            <p>	I think you may be surprised when seeing this, but yeah, I can change the message from my home computer, so I'm doing it right now<br>
+I actually want to say this another time when we are meeting in real life, if I have a chance, I will do this in real life again <br>
+maybe even twice.<br>
+My dear Edenlina<br>
+	I didn't think I would say this from the first day I met you. You were such an interesting person and a cool friend, and I thought you and I would stay like that.<br>
+But as we talked more, as I get to know you more and more, your personalities, your characters, your loving heart, your funny humor, everything about you makes me can't stop thinking about<br> 
+	I know you are still somewhat shadowed by your past; rough years are not as easy to overcome as many might think, and I understand that. I will accept everything you have to bring to the table<br>
+since it is what this type of commitment will require.<br>
+	I know I am not the best partner, appearance and personalities wise. You have probably seen some and will probably see more of that aspect of me. But I promise, I am absolutely certain that<br>
+I can and will absolutely be better for you, will become my best version for you.<br>
+	Our future is full of different possibilities, and it's understandable to worry about it, but I want to accompany you on this part of life and maybe the future<br>
+as something more than a casual friend. So please don't worry because, unless you hate and left me on your on accord, I will stay, I will be by your side, and we will uplifting each other.<br>
+	You can probably guess what I'm about to say, and I won't make you wait anymore. But I still want to make this extra special<br>
+	Edenlina Lopez-Phạm Thanh Mai, whichever name you want me to refer to you by, whenever you want me to be by your side, despite you being happy or sad, I will be there, always<br>
+Because: I LIKE YOU, I LIKE YOU A LOT, MORE THAN I CAN PUT INTO THESE WORDS.<br>
+	I would want to enter a new stage of our relationship, it can be happy, sometimes even sad and scary, but I will be by your side and always have your back<br>
+	So, would you want to become my girlfriend?<br>
+	Whatever your answer is, thank you for reading this, and thank you for being such a beautiful color of my life.</p>
 <img src="duck.jpg" id="duck">
         </div>
     </body>
@@ -34,4 +41,5 @@ Thank you for being a part of my life,Edenlina-Thanh Mai.❤️❤️❤️<br><
         });
         
         </script>
+
 </html>
