--- a/Edenlina1.html
+++ b/Edenlina1.html
@@ -23,7 +23,7 @@ I can and will absolutely be better for you, will become my best version for you
 as something more than a casual friend. So please don't worry because, unless you hate and left me on your on accord, I will stay, I will be by your side, and we will uplifting each other.<br>
 	You can probably guess what I'm about to say, and I won't make you wait anymore. But I still want to make this extra special<br>
 	Edenlina Lopez-Phạm Thanh Mai, whichever name you want me to refer to you by, whenever you want me to be by your side, despite you being happy or sad, I will be there, always<br>
-Because: I LIKE YOU, I LIKE YOU A LOT, MORE THAN I CAN PUT INTO THESE WORDS.<br>
+Because: I like you, I like you so so much, much more than I can put into these words.<br>
 	I would want to enter a new stage of our relationship, it can be happy, sometimes even sad and scary, but I will be by your side and always have your back<br>
 	So, would you want to become my girlfriend?<br>
 	Whatever your answer is, thank you for reading this, and thank you for being such a beautiful color of my life.</p>
@@ -43,3 +43,4 @@ Because: I LIKE YOU, I LIKE YOU A LOT, MORE THAN I CAN PUT INTO THESE WORDS.<br>
         </script>
 
 </html>
+
